# ffmpeg_repo

./: README.md
include/: mediaffmpegTypes.h  mediaffmpegclient.h
reference/audioplayer/src/: CMakeLists.txt  audiochunk.cpp  audioplayer.cpp  lyricsdownloader.cpp
skipe/: CMakeLists.txt  main.cpp  player.cpp  player.h  streampacket.cpp  streampacket.h
src/: CMakeLists.txt  maintest.cpp  mediaffmpegclient.cpp  mediaffmpegimpl.cpp  mediaffmpegimpl.h
